# seq_2024

./: CMakeLists.txt  README.md  arg_referencia.c  argumentos_linha_comando.c  aritmetica_ponteiros.c  arquivos_binarios.c  arquivos_txt_escrita.c  arquivos_txt_leitura.c  casts.c  comparacao_ponteiros.c  condicionais_exemplo.c  cores.h  erro_memoria.c  exemplo01.c  exemplo01_test.c  exponencial_implementacao.c  exponencial_teste.c  funcoes.c  funcoes_malloc_free.c  manipulacao_arrays.c  manipulacao_strings.c  operador_atribuicao.c  operadores_aritmeticos.c  operadores_bit_a_bit.c  operadores_logicos.c  operadores_ponteiros.c  operadores_relacionais.c  operadores_ternario_virgula_sizeof.c  recursao.c  scanf_printf.c  strings.c  structs.c  tipos_variaveis.c
Exemplos/Alocacao Dinamica de Memoria/: funcoes_calloc_realloc.c  funcoes_malloc_free.c
Exemplos/Arrays e Strings/: erro_memoria.c  manipulacao_arrays.c  manipulacao_strings.c  strings.c
Exemplos/Estrutura Basica de Programas/: scanf_printf.c
Exemplos/Estruturas/: structs.c
Exemplos/Estruturas de Iteracao e Controle/: condicionais.c  controle_fluxo.c  estruturas_repeticao.c
Exemplos/Funcoes/: arg_referencia.c  argumentos_linha_comando.c  exponencial_cabecalho.h  exponencial_implementacao.c  exponencial_teste.c  recursao.c
Exemplos/Manipulacao de Arquivos/: arquivos_binarios.c  arquivos_txt_escrita.c  arquivos_txt_leitura.c  exemplo_escrita.txt  exemplo_leitura.txt
Exemplos/Operadores e Expressoes/: casts.c  operador_atribuicao.c  operadores_aritmeticos.c  operadores_bit_a_bit.c  operadores_logicos.c  operadores_ponteiros.c  operadores_relacionais.c  operadores_ternario_virgula_sizeof.c
Exemplos/Ponteiros/: aritmetica_ponteiros.c  comparacao_ponteiros.c
Exemplos/Tipos de Dados e Variaveis/: cores.h  header_tamanho_tipos_variaveis.h  tamanho_tipos_variaveis.c  teste_tamanho_tipos_variaveis.c  tipos_variaveis.c
Exemplos/Tipos de dados e variaveis/: header_tamanho_tipos_variaveis.h  tamanho_tipos_variaveis.c  teste_tamanho_tipos_variaveis.c
Operadores e Expressões/: operador_atribuicao.c  operadores_bit_a_bit.c
